install/sample_virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: docsmgmt
  namespace: docs
spec:
  virtualHost:
    domains:
    - 'docs.solo.io'
    routes:
    - matchers:
      - prefix: /vabc10/
      routeAction:
        single:
          upstream:
            name: docs-gloo-docs-vabc10-80
            namespace: gloo-system
    - matchers:
      - prefix: /vabc11/
      routeAction:
        single:
          upstream:
            name: docs-gloo-docs-vabc11-80
            namespace: gloo-system
